--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,14 @@
     <title>Proyecto VUE web components</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
+    <main id="app">
+            <card-component :titulo="titulo" :parrafo="parrafo" :valor="valor"></card-component>
 
-
-
-
-
-    
+    </main>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/app.js"></script>
 </body>
+
 </html>
